# minimal-watch

./: Readme.md
display_sim/: Cargo.toml
display_sim/src/: main.rs
hardware/: .gitignore  fp-lib-table  leds.kicad_sch  sw.kicad_pcb  sw.kicad_pro  sw.kicad_sch  sw_components.kicad_sym  sym-lib-table
software/: CMakeLists.txt  bma400.c  bma400.h  display.c  display.h  i2c_bitbanging.c  i2c_bitbanging.h  interrupt.c  interrupt.h  main.c  main.h  nfc.c  nfc.h  openocd.conf  power_state.c  power_state.h  rtc.c  rtc.h  settings.h  stm32l0xx_hal_conf.h  stm32l0xx_hal_msp.c  stm32l0xx_it.c
